--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -49,3 +49,18 @@ a {
   text-decoration: none;
   color: white;
 }
+@media (max-width: 768px) {
+  .header{
+    position: static;
+    flex-direction: column;
+    width: auto;
+    margin-right: 0;
+  }
+  .header .logo {
+    margin-left: 0;
+  }
+  .header .list {
+    margin: 0 25px;
+   flex-wrap: wrap;
+  }
+}
