--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -142,6 +142,7 @@
   .hero-content {
     max-width: 100%;
     margin-bottom: 30px;
+    margin-top: 0;
   }
 
   .hero-content h1 {
@@ -151,12 +152,6 @@
   .hero-image {
     margin-top: 20px;
     max-width: 80%;
-  }
-
-  .hero-image img {
-    width: 200px;
-    height: 200px;
-    margin-right: 250px;
   }
 
   .social-icons {
@@ -169,7 +164,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 690px) {
   .hero-content h1 {
     font-size: 2rem;
   }
@@ -183,8 +178,9 @@
   }
 
   .hero-image img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
+    margin-right: 0;
   }
 }
 
