--- a/src/Components/project.css
+++ b/src/Components/project.css
@@ -111,18 +111,15 @@
         font-size: 2rem;
     }
 
-    .portfolio-container {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    }
 }
 
 @media (max-width: 480px) {
     .portfolio h2 {
         font-size: 1.8rem;
+        margin-top: 20px;
     }
-
-    .portfolio-container {
-        grid-template-columns: 1fr;
+    .portfolio {
+        padding: 10px;
     }
 }
 
